Changed the browser type in the properties file to chrome and opened the regression tag

--- a/src/test/resources/com/collegeboard/test_data/configuration.properties
+++ b/src/test/resources/com/collegeboard/test_data/configuration.properties
@@ -1,7 +1,7 @@
 url=https://clep.collegeboard.org
 urlForRegisteration=https://clep.collegeboard.org/register 
 urlForRegisterAndSchedule=https://clep.collegeboard.org/test-center-search
-browser= firefox
+browser= chrome
 firefox=./src/test/resources/com/collegeboard/drivers/geckodriver
 chrome=./src/test/resources/com/collegeboard/drivers/chromedriver
 firstName=Yeni
